[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["alejiosp <0924953+alejio@users.noreply.github.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
